Reworked FileService methods, no now more of the return Result. Renaming a package now repackages its contents and fixes imports.